--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Auth */
 .auth-method {
   @apply m-5 rounded-3xl border border-threads-gray-light p-6 duration-150;
 }
 
-/* Post */
 .post {
   @apply mx-auto flex border-b border-threads-gray-light p-5 md:max-w-[700px] md:px-0;
+}
+
+.search {
+  @apply h-full w-full rounded-xl border border-threads-gray-light bg-black py-3 pl-16 text-white placeholder-threads-gray-light outline-none md:pl-24;
+}
+
+.info {
+  @apply mb-4 h-full w-full rounded-xl bg-threads-gray-dark py-5 pl-6 text-white placeholder-threads-gray-light outline-none;
 }
 
 /* for the Header */
